--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -583,107 +583,107 @@ stories:
   domain: http://www.frontiersman.com/
   link: https://www.frontiersman.com/national/entertainment/duane-dog-chapman-is-seeing-a-shrink/image_8eeadc08-15dd-5599-bf29-dac2bc3e5a5c.html
 images:
-- name: ellis-island-ellis-island-room-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-light-dali.jpg
-- name: window-window-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-ww2-color.jpg
-- name: statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-- name: death-valley-death-valley-national-park-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-marcel-duchamp.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
-- name: aws-s3-stories-soldier-computer-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-soldier-computer-dark-dali.jpg
-- name: sand-hand-sand-hand-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-kandinsky-bv.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
-- name: downtown-los-angeles-downtown-la-blue-brush.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-brush.JPG
-- name: walled-garden-walled-garden-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-free-woman.jpg
-- name: blossombar-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-00-00.jpg
-- name: mistywoods-babyfoot-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-light-dali.jpg
-- name: copper-circuit-small-town-street-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-small-town-street-2.jpg
-- name: abandonedbuildings_dali_three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_three.jpg
-- name: walled-garden-walled-garden-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kandinsky-bv.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit.jpg
-- name: machine-road-machine-road-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-feed-people.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-emily-carr.jpg
-- name: aws-s3-stories-adam-smith-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-dali-three.jpg
-- name: locked-up-steam-lock-up-steam-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-emily-carr.jpg
-- name: nazi-invasion-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cemetery_36690406946_o.jpg
-- name: white-house-lawn-white-house-window-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crunch-paper.jpg
-- name: fence-fence-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alien-goggles.jpg
-- name: white-house-lawn-white-house-window-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
-- name: 35562068104_fa20c57575-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-copper-circuit.jpg
-- name: bf-skinner-san-francisco-salesforce-bay-bridge.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-francisco-salesforce-bay-bridge.jpg
-- name: abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
-- name: stalin-time-japanese-garden-tree.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-japanese-garden-tree.jpg
-- name: birdhouse-birdhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-far-away.jpg
-- name: powerlines-power-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-nazi-poster.jpg
-- name: hollywood-building-hollywood-building-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gred-mash.jpg
-- name: stories-cargo-ship-on-sea-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-atari-missle.jpg
-- name: curtain-curtain-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-electricity.jpg
-- name: copper-circuit-wild-gease-in-the-water.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-wild-gease-in-the-water.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-- name: yosemite-yosemite-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-hot-spicy.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still-600.jpg
-- name: oldroad-old-road-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-monet-one.jpg
-- name: bf-skinner-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cruise-ship-shore-log.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-- name: copper-circuit-fire-truck-pulling-out-of-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fire-truck-pulling-out-of-station.jpg
-- name: copper-circuit-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-boats-waterfront-bristol.jpg
-- name: oldbarn-oldbarn-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-umberto-bocc.jpg
-- name: stalin-time-san-francisco-wharf-clock.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-wharf-clock.jpg
-- name: subway-subway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
-- name: store-on-corner-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
-- name: old-building-clouds-with-tree-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-nazi-invasion.jpg
-- name: store-on-corner-store-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gan-vogh.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: stories-internet-gauages-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-internet-gauages-3.jpg
-- name: server-cloud-server-racks-door-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sand-paper.jpg
+- name: window-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crafty-painting.jpg
+- name: oldhouse-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dali-two.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
+- name: oldhotel-oldhotel-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-deep-connections.jpg
+- name: containership-containership-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-yellow-collage.jpg
+- name: statue-of-liberty-front-view-statueofliberty-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-nazi-poster.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: curtain-curtain-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smooth-ride.jpg
+- name: border-crossing-bordercrossing-pablo-blue.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-pablo-blue.png
+- name: old-church-oldchurch-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crunch-paper.jpg
+- name: nazi-invasion-surveillance-over-the-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-over-the-city.jpg
+- name: legal-statue-legalstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dry-skin.jpg
+- name: oldcabin-store-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-marcel-duchamp.jpg
+- name: beach-clouds-lifeguard-beachclouds-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-wols.jpg
+- name: dc-statue-dcstatue-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-nazi-poster.jpg
+- name: nazi-invasion-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-la_36349151230_o.jpg
+- name: oldhouse-oldhouse-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-copper-circuit.jpg
+- name: meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
+- name: birdhouse-birdhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-asteroids.jpg
+- name: gypsymosaic-gypsy-eyes-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-gan-vogh.jpg
+- name: trucksilo-trucksilo-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-far-away.jpg
+- name: oldhotel-oldhotel-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-emily-carr.jpg
+- name: beach-rocks-beach-rocks-currents-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-neo-instinct.jpg
+- name: bf-skinner-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-gas-station_35891228584_o.jpg
+- name: old-house-oldhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-crabapple.jpg
+- name: meadowbutterfly-meadow-butterfly-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crafty-painting.jpg
+- name: oldroad-old-road-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-purple-pond.jpg
+- name: old-church-oldchurch-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
+- name: oldhouse-granaryfield-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-yellow-paper.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+- name: nyc-flag-nycflag-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-creativity.jpg
+- name: berlinwall-DSC-0084-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crunch-paper.jpg
+- name: crow-crow-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-matrix.jpg
+- name: amusement-park-amusement-park-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-alien-goggles.jpg
+- name: copper-circuit-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-brooklyn-station.jpg
+- name: rain-princess-IMG_8358.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8358.jpg
+- name: nazi-invasion-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
+- name: mosaic-face-mosaic-face-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-pablo-blue.jpg
+- name: bordercrossing-bordercrossing-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-kand-two.jpg
+- name: adam-smith-adam-smith-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
+- name: power-lines-power-lines-empty-space-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-space-pizza.jpg
+- name: walled-garden-walled-garden-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-rainbow-festival.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+- name: wind-mills-windmills-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
+- name: bf-skinner-volkswagon-microbus-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-volkswagon-microbus-windows.jpg
+- name: docks-docks-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-paper.jpg
+- name: store-on-corner-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
 ---
 Park City Police Find Homeless Camp That Appears To Have Been Recently Used.&nbsp;Memphis To Meet Penn State In Goodyear Cotton Bowl Classic.&nbsp;Respecting Boundaries At Church.&nbsp;Emma Watson Compares Taylor Swift To Little Women's Jo March.&nbsp;Top Offensive Effort Sparks Storm.&nbsp;Notes From The Traffic Safety Committee Meeting.&nbsp;Wedding Dance Dendrochronological Analysis.&nbsp;Shooting At Mall In Denver Suburb Wounds 1; No Arrests Made.&nbsp;
